[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "time-mcp"
version = "1.0.0"
description = "A simple Model Context Protocol server that provides tools to fetch the current date and time from the system"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Sean", email = "work.spectrum532@passmail.com" }
]
keywords = ["mcp", "time", "date", "system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/DochertyDev/time-mcp"
repository = "https://github.com/DochertyDev/time-mcp"
bugtracker = "https://github.com/DochertyDev/time-mcp/issues"
license = {text = "MIT"}

dependencies = [
    "mcp>=0.5.0",
]

[project.urls]
GitHub = "https://github.com/DochertyDev/time-mcp"
Issues = "https://github.com/DochertyDev/time-mcp/issues"
Changelog = "https://github.com/DochertyDev/time-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
time-mcp = "time_mcp.server:main"

[tool.setuptools]
packages = ["time_mcp"]

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ['py39']
